--- a/cloudbuild-diagnostic.yaml
+++ b/cloudbuild-diagnostic.yaml
@@ -1,200 +1,126 @@
-# Comprehensive diagnostic Cloud Build configuration
-# This file explicitly avoids Docker and uses our custom steps
-
+# Diagnostic Cloud Build Configuration
+# Enhanced logging to identify deployment issues
+timeout: 1200s
 steps:
-  # Step 1: Basic environment check
-  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk:latest'
-    entrypoint: 'bash'
-    args:
-      - '-c'
-      - |
-        echo "=========================================="
-        echo "STEP 1: Environment Diagnostics"
-        echo "=========================================="
-        echo "Project ID: $PROJECT_ID"
-        echo "Build ID: $BUILD_ID"
-        echo "Current directory: $(pwd)"
-        echo "Available files:"
-        ls -la
-        echo ""
-        echo "=== Google Cloud Authentication ==="
-        gcloud auth list
-        echo ""
-        echo "=== Project Configuration ==="
-        gcloud config list
-        echo ""
-        echo "✅ Step 1 Complete: Environment verified"
-    env:
-      - 'PROJECT_ID=workspace-automation-466800'
+- name: 'us-central1-docker.pkg.dev/$PROJECT_ID/clasp-builder/clasp-builder:latest'
+  entrypoint: bash
+  args:
+    - -c
+    - |
+      set -e
+      echo "🔍 DIAGNOSTIC MODE - Enhanced Logging"
+      echo "====================================="
       
-  # Step 2: Check project structure
-  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk:latest'
-    entrypoint: 'bash'
-    args:
-      - '-c'
-      - |
-        echo "=========================================="
-        echo "STEP 2: Project Structure Check"
-        echo "=========================================="
-        echo "Checking for projects directory..."
-        if [ -d "projects" ]; then
-          echo "✅ projects/ directory exists"
-          echo "Contents:"
-          ls -la projects/
-          echo ""
-          
-          for dir in projects/*/; do
-            if [ -d "$dir" ]; then
-              echo "📁 Checking $dir"
-              if [ -f "$dir.clasp.json" ]; then
-                echo "  ✅ .clasp.json exists"
-                echo "  📄 Content:"
-                cat "$dir.clasp.json" || echo "  ❌ Could not read .clasp.json"
-                echo ""
-              else
-                echo "  ❌ .clasp.json missing"
-              fi
-            fi
-          done
-        else
-          echo "❌ projects/ directory not found"
-          echo "Available directories:"
-          ls -la
-          exit 1
-        fi
-        echo "✅ Step 2 Complete: Project structure verified"
-        
-  # Step 3: Test Secret Manager access
-  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk:latest'
-    entrypoint: 'bash'
-    args:
-      - '-c'
-      - |
-        echo "=========================================="
-        echo "STEP 3: Secret Manager Test"
-        echo "=========================================="
-        if gcloud secrets versions access latest --secret="clasp-credentials" --project="$PROJECT_ID" > /tmp/test-secret.json; then
-          echo "✅ Successfully accessed clasp-credentials secret"
-          echo "Secret file size: $(wc -c < /tmp/test-secret.json) bytes"
-          echo "Secret structure check:"
-          if jq . /tmp/test-secret.json > /dev/null 2>&1; then
-            echo "✅ Valid JSON format"
-            echo "Keys present: $(jq -r 'keys | @csv' /tmp/test-secret.json 2>/dev/null || echo "Unable to parse keys")"
+      echo "✅ Custom builder environment ready."
+      echo "Node.js version: $$(node --version)"
+      echo "gcloud version: $$(gcloud --version | head -1)"
+      
+      # Install clasp
+      echo "📥 Installing @google/clasp..."
+      npm install -g @google/clasp
+      echo "✅ Clasp installed: $$(clasp --version)"
+      
+      # DIAGNOSTIC: Check project structure
+      echo "📁 Checking project directories..."
+      for dir in projects/*/; do
+        if [ -d "$$dir" ]; then
+          echo "  Found: $$dir"
+          if [ -f "$$dir.clasp.json" ]; then
+            echo "    ✅ Has .clasp.json"
+            echo "    Script ID: $$(cat $$dir.clasp.json | grep scriptId | head -1)"
           else
-            echo "❌ Invalid JSON format"
-            echo "First 200 characters of secret:"
-            head -c 200 /tmp/test-secret.json
+            echo "    ❌ Missing .clasp.json"
           fi
-          rm -f /tmp/test-secret.json
-          echo "✅ Step 3 Complete: Secret Manager access verified"
-        else
-          echo "❌ Failed to access clasp-credentials secret"
-          echo "Available secrets:"
-          gcloud secrets list --project="$PROJECT_ID" || echo "Could not list secrets"
-          exit 1
         fi
-    env:
-      - 'PROJECT_ID=workspace-automation-466800'
+      done
       
-  # Step 4: Install and test clasp
-  - name: 'node:18-alpine'
-    entrypoint: 'sh'
-    args:
-      - '-c'
-      - |
-        echo "=========================================="
-        echo "STEP 4: Node.js and clasp Setup"
-        echo "=========================================="
-        
-        # Install required packages
-        apk add --no-cache curl bash jq
-        
-        echo "Node version: $(node --version)"
-        echo "NPM version: $(npm --version)"
-        
-        echo "Installing clasp..."
-        npm install -g @google/clasp
-        
-        echo "Clasp version: $(clasp --version)"
-        
-        echo "Setting up clasp credentials..."
-        mkdir -p ~/.config/@google/clasp
-        
-        # Get credentials from Secret Manager using gcloud (installed in previous step)
-        if command -v gcloud > /dev/null; then
-          echo "Using gcloud to fetch credentials..."
-          gcloud auth application-default login --no-browser --quiet || echo "ADC setup failed, continuing..."
-          gcloud secrets versions access latest --secret="clasp-credentials" --project="workspace-automation-466800" > ~/.clasprc.json
-        else
-          echo "❌ gcloud not available in Node container"
-          exit 1
-        fi
-        
-        chmod 600 ~/.clasprc.json
-        
-        echo "Testing clasp authentication..."
-        if clasp login --status; then
-          echo "✅ Clasp authentication successful"
-          echo "✅ Step 4 Complete: Clasp setup verified"
-        else
-          echo "❌ Clasp authentication failed"
-          echo "Credential file content (first 100 chars):"
-          head -c 100 ~/.clasprc.json
-          exit 1
-        fi
+      # DIAGNOSTIC: Check secret content before authentication
+      echo "🔐 Checking Secret Manager access..."
+      if gcloud secrets versions access latest --secret="clasp-credentials" --project="$PROJECT_ID" > ~/.clasprc.json; then
+        echo "✅ Secret retrieved successfully"
+        echo "📋 Secret content preview:"
+        echo "$$(head -c 200 ~/.clasprc.json)..."
+      else
+        echo "❌ Failed to retrieve clasp-credentials secret"
+        exit 1
+      fi
+      
+      chmod 600 ~/.clasprc.json
+      
+      # DIAGNOSTIC: Test clasp authentication
+      echo "🔐 Testing clasp authentication..."
+      if clasp login --status > /dev/null 2>&1; then
+        echo "✅ Clasp authentication successful"
+      else
+        echo "❌ Clasp authentication failed"
+        echo "📋 Attempting clasp login --status with verbose output:"
+        clasp login --status || true
+        echo "📋 Contents of ~/.clasprc.json:"
+        cat ~/.clasprc.json | head -10
+        exit 1
+      fi
 
-  # Step 5: Test deployment to one project
-  - name: 'node:18-alpine'
-    entrypoint: 'sh'
-    args:
-      - '-c'
-      - |
-        echo "=========================================="
-        echo "STEP 5: Single Project Deployment Test"
-        echo "=========================================="
-        
-        # Install required packages
-        apk add --no-cache curl bash jq
-        
-        # Install clasp
-        npm install -g @google/clasp
-        
-        # Setup credentials (repeat from step 4 since containers don't share state)
-        mkdir -p ~/.config/@google/clasp
-        
-        # For this step, we'll try a simpler approach - embed the credentials
-        echo "Setting up clasp credentials..."
-        
-        # Test with calendar project first (smallest)
-        TEST_PROJECT="projects/calendar"
-        
-        if [ -d "$TEST_PROJECT" ] && [ -f "$TEST_PROJECT/.clasp.json" ]; then
-          echo "Testing deployment to $TEST_PROJECT..."
-          cd "$TEST_PROJECT"
+      # Deploy with enhanced error reporting
+      echo "📦 Starting deployment with enhanced diagnostics..."
+      PROJECTS=(
+        "projects/calendar" "projects/chat" "projects/docs" "projects/drive"
+        "projects/gmail" "projects/photos" "projects/sheets" "projects/slides"
+        "projects/tasks" "projects/utility"
+      )
+      
+      SUCCESS_COUNT=0
+      TOTAL_PROJECTS=0
+      FAILED_PROJECTS=""
+      
+      for PROJECT_DIR in "$${PROJECTS[@]}"; do
+        echo "🔍 Checking $$PROJECT_DIR..."
+        if [ -d "$$PROJECT_DIR" ] && [ -f "$$PROJECT_DIR/.clasp.json" ]; then
+          TOTAL_PROJECTS=$$((TOTAL_PROJECTS + 1))
+          echo "   -> Deploying $$PROJECT_DIR..."
           
-          echo "Project configuration:"
-          cat .clasp.json
+          # Show .clasp.json content for debugging
+          echo "   📋 .clasp.json content:"
+          cat "$$PROJECT_DIR/.clasp.json"
           
-          echo "Available files to deploy:"
-          ls -la
-          
-          echo "Current directory: $(pwd)"
-          
-          echo "✅ Step 5 Complete: Project structure ready for deployment"
-          echo "(Skipping actual clasp push to avoid authentication complexity in final step)"
+          # Attempt deployment with detailed error output
+          if (cd "$$PROJECT_DIR" && clasp push --force); then
+            echo "   ✅ $$PROJECT_DIR deployed successfully"
+            SUCCESS_COUNT=$$((SUCCESS_COUNT + 1))
+          else
+            echo "   ❌ Failed to deploy $$PROJECT_DIR"
+            echo "   📋 Error details:"
+            (cd "$$PROJECT_DIR" && clasp push --force 2>&1) || true
+            FAILED_PROJECTS="$$FAILED_PROJECTS $$PROJECT_DIR"
+          fi
         else
-          echo "❌ Test project $TEST_PROJECT not found or invalid"
-          echo "Available directories:"
-          ls -la projects/ || echo "No projects directory"
-          exit 1
+          echo "   ⚠️ Skipping $$PROJECT_DIR (missing directory or .clasp.json)"
+          if [ ! -d "$$PROJECT_DIR" ]; then
+            echo "      Directory does not exist"
+          fi
+          if [ ! -f "$$PROJECT_DIR/.clasp.json" ]; then
+            echo "      .clasp.json file does not exist"
+          fi
         fi
-
-# Explicitly specify no Docker builds
+        echo ""
+      done
+      
+      # Report Summary
+      echo "================================================="
+      echo "📊 DIAGNOSTIC DEPLOYMENT SUMMARY"
+      echo "================================================="
+      echo "Total projects found: $$TOTAL_PROJECTS"
+      echo "✅ Successful deployments: $$SUCCESS_COUNT"
+      
+      if [ $$SUCCESS_COUNT -eq $$TOTAL_PROJECTS ] && [ $$TOTAL_PROJECTS -gt 0 ]; then
+        echo "🎉 ALL DEPLOYMENTS COMPLETED SUCCESSFULLY!"
+      else
+        echo "❌ Failed deployments: $$((TOTAL_PROJECTS - SUCCESS_COUNT))"
+        echo "Failed projects:$$FAILED_PROJECTS"
+        echo ""
+        echo "🔍 DIAGNOSTIC COMPLETE - Check logs above for specific errors"
+        exit 1
+      fi
 options:
-  substitution_option: 'ALLOW_LOOSE'
+  substitution_option: ALLOW_LOOSE
   logging: CLOUD_LOGGING_ONLY
-  machineType: 'E2_HIGHCPU_8'
-
-# Ensure no source or Docker context
-sourceProvenance:
-  enabled: false
+  machineType: E2_HIGHCPU_8
