--- a/package.json
+++ b/package.json
@@ -3,44 +3,61 @@
   "version": "2.0.0",
   "description": "Google Apps Script automation tools with deployment status management",
   "scripts": {
-    "setup": "node tools/setup-projects.js",
-    "migrate": "node tools/migrate-projects.js", 
-    "deploy": "node tools/deploy-tools.js deploy-all public",
-    "deploy-beta": "node tools/deploy-tools.js deploy-all beta",
-    "deploy-public": "node tools/deploy-tools.js deploy-all public",
-    "status": "node tools/deploy-tools.js status",
-    "dashboard": "node tools/deploy-tools.js dashboard",
-    "validate": "node tools/validate-projects.js",
-    "set-status": "node tools/deploy-tools.js set-status",
-    "verify": "./verify-setup.sh",
-    "security:scan": "node tools/security-scanner.js",
-    "security:dashboard": "node tools/security-dashboard.js",
-    "security:gas-scan": "node tools/gas-security-scanner.js",
+    "setup": "node automation/dev-tools/setup-projects.js",
+    "migrate": "node automation/dev-tools/migrate-projects.js", 
+    "deploy": "node automation/dev-tools/deploy-tools.js deploy-all public",
+    "deploy-beta": "node automation/dev-tools/deploy-tools.js deploy-all beta",
+    "deploy-public": "node automation/dev-tools/deploy-tools.js deploy-all public",
+    "status": "node automation/dev-tools/deploy-tools.js status",
+    "dashboard": "node automation/dev-tools/deploy-tools.js dashboard",
+    "validate": "node automation/dev-tools/validate-projects.js",
+    "set-status": "node automation/dev-tools/deploy-tools.js set-status",
+    "verify": "./automation/shell-scripts/verify-setup.sh",
+    "security:scan": "node automation/dev-tools/security-scanner.js",
+    "security:dashboard": "node docs/security/Snyk/tools/security-dashboard.js",
+    "security:gas-scan": "node docs/security/Snyk/tools/gas-security-scanner.js",
     "snyk:test": "snyk test --all-projects",
     "snyk:monitor": "snyk monitor --all-projects",
     "snyk:wizard": "snyk wizard",
-    "repo:review": "node tools/repository/repo-review.js",
-    "repo:report": "node tools/repository/repo-reporter.js",
-    "repo:report-overview": "node tools/repository/repo-reporter.js overview",
-    "repo:report-security": "node tools/repository/repo-reporter.js security",
-    "repo:report-code": "node tools/repository/repo-reporter.js code",
-    "version:current": "node tools/repository/version-manager.js current",
-    "version:bump": "node tools/repository/version-manager.js bump",
-    "version:bump-minor": "node tools/repository/version-manager.js bump minor",
-    "version:bump-major": "node tools/repository/version-manager.js bump major",
-    "version:history": "node tools/repository/version-manager.js history",
-    "version:release": "node tools/repository/version-manager.js release",
-    "version:notes": "node tools/repository/version-manager.js notes",
+    "repo:review": "node docs/tools/repo-review.js",
+    "repo:report": "node docs/tools/repo-reporter.js",
+    "repo:report-overview": "node docs/tools/repo-reporter.js overview",
+    "repo:report-security": "node docs/tools/repo-reporter.js security",
+    "repo:report-code": "node docs/tools/repo-reporter.js code",
+    "version:current": "node docs/tools/version-manager.js current",
+    "version:bump": "node docs/tools/version-manager.js bump",
+    "version:bump-minor": "node docs/tools/version-manager.js bump minor",
+    "version:bump-major": "node docs/tools/version-manager.js bump major",
+    "version:history": "node docs/tools/version-manager.js history",
+    "version:release": "node docs/tools/version-manager.js release",
+    "version:notes": "node docs/tools/version-manager.js notes",
     "publication:check": "npm run repo:review && npm run repo:report",
     "publication:prepare": "npm run repo:review && npm run version:bump-minor && npm run repo:report",
-    "git:sync": "./tools/setup/quick-sync.sh interactive",
-    "git:sync-auto": "./tools/setup/quick-sync.sh auto",
-    "git:quick-sync": "./tools/setup/quick-sync.sh",
-    "git:push-safe": "./tools/setup/quick-sync.sh auto",
-    "sync": "./tools/git-sync.sh push",
-    "setup:ide": "./tools/setup/setup-ide.sh",
-    "setup:github": "./tools/setup-github-actions.sh",
-    "repo:cleanup": "./cleanup-repo.sh"
+    "git:sync": "./automation/shell-scripts/quick-sync.sh interactive",
+    "git:sync-auto": "./automation/shell-scripts/quick-sync.sh auto",
+    "git:quick-sync": "./automation/shell-scripts/quick-sync.sh",
+    "git:push-safe": "./automation/shell-scripts/quick-sync.sh auto",
+    "sync": "./automation/shell-scripts/git-sync.sh push",
+    "setup:ide": "./automation/shell-scripts/setup-ide.sh",
+    "setup:github": "./automation/shell-scripts/setup-github-actions.sh",
+    "setup:git-hooks": "./automation/shell-scripts/setup-git-hooks.sh",
+    "repo:cleanup": "./automation/shell-scripts/cleanup-repo.sh",
+    "lint:gas": "node automation/dev-tools/gas-linter.js",
+    "lint:all": "node automation/dev-tools/gas-linter.js --all",
+    "lint:staged": "node automation/dev-tools/gas-linter.js --staged",
+    "lint:fix": "node automation/dev-tools/gas-linter.js --fix --all",
+    "format": "node automation/dev-tools/gas-formatter.js",
+    "format:all": "node automation/dev-tools/gas-formatter.js --all",
+    "catalog": "node automation/dev-tools/gas-catalog.js",
+    "catalog:update": "node automation/dev-tools/gas-catalog.js",
+    "catalog:watch": "node automation/dev-tools/gas-catalog.js --watch",
+    "catalog:json": "node automation/dev-tools/gas-catalog.js --json",
+    "gas:check": "npm run lint:all && npm run catalog",
+    "gas:fix": "npm run format:all && npm run lint:fix && npm run catalog",
+    "shell:catalog": "node automation/dev-tools/shell-catalog.js",
+    "shell:catalog:watch": "node automation/dev-tools/shell-catalog.js --watch",
+    "shell:catalog:json": "node automation/dev-tools/shell-catalog.js --json",
+    "catalog:all": "npm run catalog && npm run shell:catalog"
   },
   "repository": {
     "type": "git",
